Updated page to support script.

--- a/website/pages/home.html
+++ b/website/pages/home.html
@@ -1,4 +1,4 @@
-<div>
+<div class="pages home">
 	<img src="media/home%20images/astroids.jpg" alt="Artistic astroids made with cubes." class="astroids">
 	
 	<span class="pageHeader">
