--- a/website/index.html
+++ b/website/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!-- <!DOCTYPE html> 
 
 <html>
 	<head>
@@ -11,11 +11,9 @@
 	</head>
 	<body>
 		<div class="page">
-			<!-- Page Title -->
 			<span class="title">TK Digital Arts</span><br />
 			<span class="tagline">&#8220;art for art's sake, not for money's&#8221;</span>
 			
-			<!-- Title picture -->
 			<div class="sliderContainer">
 				<div class="titleSlider">
 					<img src="media/slider/pixels.jpg" alt="Black and white pixels">
@@ -23,18 +21,14 @@
 					<img src="media/slider/shapes.jpg" alt="Black and white shapes.">
 				</div>
 			</div>
-			
-			<!-- menu bar -->
 			<div class="menuBar">
 				<a class="menuButton" href="#home">Home</a>
 				<a class="menuButton" href="#portfolio">Portfolio</a>
 				<a class="menuButton" href="#contact">Contact</a>
 			</div>
 			
-			<!-- jquery loads content here -->
 			<div class="content"></div>
 			
-			<!-- footer -->
 			<div class="hr"></div>
 			<div class="footer">
 				Copyright &copy; TK Digital Art<br />
@@ -46,3 +40,4 @@
 		</div>
 	</body>
 </html>
+ -->
